crates/iota/tests/snapshots/shell_tests__with_network__dummy.sh.snap
---
source: crates/iota/tests/shell_tests.rs
description: tests/shell_tests/with_network/dummy.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# Modifications Copyright (c) 2025 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

# simple test just to make sure the test runner works with the network
iota client --client.config $CONFIG objects --json | jq 'length'

----- results -----
success: true
exit_code: 0
----- stdout -----
5

----- stderr -----
