crates/iota/tests/snapshots/shell_tests__with_network__regression_6546.sh.snap
---
source: crates/iota/tests/shell_tests.rs
description: tests/shell_tests/with_network/regression_6546.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# Modifications Copyright (c) 2025 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

# fixing issue https://github.com/iotaledger/iota/issues/6546

COIN=$(iota client --client.config $CONFIG objects   --json | jq '.[0].data.objectId')
ADDR=$(iota client --client.config $CONFIG addresses --json | jq '.addresses[0][1]')

iota client --client.config $CONFIG \
  call --package 0x2 --module iota --function transfer --args $COIN $ADDR \
  --gas-budget 100000000 \
  --json | jq '.effects.status'

----- results -----
success: true
exit_code: 0
----- stdout -----
{
  "status": "success"
}

----- stderr -----
